hphp/test/zend/good/zend/class_alias_008.php
<?php

abstract class foo { }

class_alias('foo', "\0");

$a = "\0";

new $a;

?>