hphp/test/zend/bad/zend/ns_077_1.php
<?php
namespace foo;

function foo($a = array(0 => \unknown))
{
}

foo();